[tool.poetry]
name = "sgx-demo-backend"
version = "0.1.0"
description = ""
authors = ["Denis Grinev <denis.grinev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tornado = "^6.3.3"
near-api = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
